Сверстали главную страницу с объявлениями

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/styles.css">
     </head>
     <body>
-        <header class="header">
+        <header class="header container">
             <div class="navbar">
                 <a href="/index.html" class="logo">
                     <img src="images/logo.png" alt="#" class="logo-image">
@@ -58,5 +58,162 @@
                 </button>
             </div>
         </header>
+
+        <div class="page-content container">
+            <main class="main">
+                <h2 class="paget-title">Рекомендации для вас</h2>
+                <div class="cards">
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/dom.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Дом на участке 6 сот.</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            4 890 000 ₽
+                        </strong>
+                        <p class="card-text">Краснодарский край, Динской р-н</p>
+                        <p class="card-text">27 июля 12:12</p>
+                    </div>      
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/krovat.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Кровать</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            2 990 ₽
+                        </strong>
+                        <p class="card-text">Санкт-Петербург</p>
+                        <p class="card-text">27 июля 13:54</p>
+                    </div>      
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/mashina.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Mercedes-Benz A200</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            2 670 800 ₽
+                        </strong>
+                        <p class="card-text">Москва</p>
+                        <p class="card-text">27 июля 13:44</p>
+                    </div>      
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/mikrovolnovka.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Микроволновая печь Candy бу</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            1 000 ₽
+                        </strong>
+                        <p class="card-text">Самарская область, Сызрань</p>
+                        <p class="card-text">27 июля 9:13</p>
+                    </div>      
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/sk.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Скутер</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            6 000 ₽
+                        </strong>
+                        <p class="card-text">Калужская область, Кировский р-н</p>
+                        <p class="card-text">27 июля 11:41</p>
+                    </div>      
+                    <div class="card">
+                        <a href="#" class="card-link">
+                            <img src="images/top.jpg" alt="photo" class="card-image">
+                        </a>
+                        <div class="card-header">
+                            <a href="#" class="card-link">
+                                <h3 class="card-title">Топ</h3>
+                            </a>
+                            <button class="like">
+                                <img src="images/favourite.svg" alt="Like">
+                            </button>
+                        </div>
+                        <strong class="card-price">
+                            150 ₽
+                        </strong>
+                        <p class="card-text">Москва</p>
+                        <p class="card-text">27 июля 14:11</p>
+                    </div>      
+                </div>
+            </main>
+            <aside class="sidebar">
+                <h4 class="page-title">Сервисы и услуги</h4>
+                <div class="sersice">
+                    <img src="images/dostavka.svg" alt="icon: shipping" class="service-image">
+                    <h5 class="service-title">Доставка</h5>
+                    <p class="service-text">Проверка при получении и возможность бесплатно вернуть товар</p>
+                </div>
+                <div class="sersice">
+                    <img src="images/avtoteka.svg" alt="icon: shipping" class="service-image">
+                    <h5 class="service-title">Автотека</h5>
+                    <p class="service-text">Отчёт с историей авто: пробег, владельцы, сведения о залоге, ДТП и ремонтах</p>
+                </div>
+                <div class="sersice">
+                    <img src="images/bronirovanie.svg" alt="icon: shipping" class="service-image">
+                    <h5 class="service-title">Онлайн-бронирование жилья</h5>
+                    <p class="service-text">Посуточная аренда квартир и домов: большой выбор вариантов для поездок по России</p>
+                </div>
+                <hr color="#E5E5E5">
+                <footer class="footer">
+                    <p class="footer-text">© ООО «Абито», 2011–2021</p>
+                    <ul class="footer-menu">
+                        <li class="footer-menu-item">
+                            <a href="" class="footer-text">Политика конфиденциальности</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="" class="footer-text">Обработка данных</a>
+                        </li>
+                    </ul>
+                    <ul class="footer-menu">
+                        <li class="footer-menu-item">
+                            <a href="" class="footer-link">Реклама на сайте</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="" class="footer-link">Вакансии</a>
+                        </li>
+                        <li class="footer-menu-item">
+                            <a href="" class="footer-link">Помощь</a>
+                        </li>
+                    </ul>
+                </footer>
+            </aside>
+        </div>
     </body>
 </html>
