Сверстали страницу объявления

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <header class="header container">
             <div class="navbar">
-                <a href="/index.html" class="logo">
+                <a href="index.html" class="logo">
                     <img src="images/logo.png" alt="#" class="logo-image">
                 </a>
 
@@ -61,10 +61,10 @@
 
         <div class="page-content container">
             <main class="main">
-                <h2 class="paget-title">Рекомендации для вас</h2>
+                <h2 class="page-title">Рекомендации для вас</h2>
                 <div class="cards">
                     <div class="card">
-                        <a href="#" class="card-link">
+                        <a href="single.html" class="card-link">
                             <img src="images/dom.jpg" alt="photo" class="card-image">
                         </a>
                         <div class="card-header">
